目录更新至第6章

--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/00.content-mu-lu.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/00.content-mu-lu.md
@@ -37,165 +37,165 @@
   * [1.17Prediction: Death of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
   * [预言：学校的死亡](01.introduction-qian-yan.md#%E9%A2%84%E8%A8%80%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E7%9A%84%E6%B6%88%E4%BA%A1)
 * [2Motto](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
-* [箴言](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/02.Motto%E7%AE%B4%E8%A8%80.html)
+* [箴言](02.motto-zhen-yan.md#箴言)
 * [3Brain science](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
-* [脑科学](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/03.Brain%20science%E8%84%91%E7%A7%91%E5%AD%A6.html)
+* [脑科学](03.brain-science-nao-ke-xue.md#脑科学)
 * [4Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive)
-* [学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html)
+* [学习内驱力](04.learn-drive-xue-xi-nei-qu-li.md#学习内驱力)
   * [4.1Definition](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Definition)
-  * [定义](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E5%AE%9A%E4%B9%89)
+  * [定义](04.learn-drive-xue-xi-nei-qu-li.md#%E5%AE%9A%E4%B9%89)
   * [4.2Terminology](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Terminology)
-  * [术语](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%9C%AF%E8%AF%AD)
+  * [术语](04.learn-drive-xue-xi-nei-qu-li.md#%E6%9C%AF%E8%AF%AD)
   * [4.3Novelty and stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
-  * [新奇和压力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%96%B0%E5%A5%87%E5%92%8C%E5%8E%8B%E5%8A%9B)
+  * [新奇和压力](04.learn-drive-xue-xi-nei-qu-li.md#%E6%96%B0%E5%A5%87%E5%92%8C%E5%8E%8B%E5%8A%9B)
   * [4.4Suppression of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
-  * [学习内驱力的抑制因素](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E5%AD%A6%E4%B9%A0%E9%A9%B1%E5%8A%9B%E7%9A%84%E6%8A%91%E5%88%B6%E5%9B%A0%E7%B4%A0)
+  * [学习内驱力的抑制因素](04.learn-drive-xue-xi-nei-qu-li.md#%E5%AD%A6%E4%B9%A0%E9%A9%B1%E5%8A%9B%E7%9A%84%E6%8A%91%E5%88%B6%E5%9B%A0%E7%B4%A0)
   * [4.5Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
-  * [拓展阅读](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB)
+  * [拓展阅读](04.learn-drive-xue-xi-nei-qu-li.md#%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB)
   * [4.6Summary: Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
-  * [摘要：学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.html#%E6%91%98%E8%A6%81%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+  * [摘要：学习内驱力](04.learn-drive-xue-xi-nei-qu-li.md#%E6%91%98%E8%A6%81%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
 * [5Effect of schooling on the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Effect_of_schooling_on_the_learn_drive)
-* [学校教育对学习内驱力的影响](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html)
+* [学校教育对学习内驱力的影响](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#学校教育对学习内驱力的影响)
   * [5.1Learn drive vs. age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
-  * [学习内驱力与年龄](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%B9%B4%E9%BE%84)
+  * [学习内驱力与年龄](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%B9%B4%E9%BE%84)
   * [5.2Learn drive vs. knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
-  * [学习内驱力与知识](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E7%9F%A5%E8%AF%86)
+  * [学习内驱力与知识](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E7%9F%A5%E8%AF%86)
   * [5.3Learn drive vs. learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
-  * [学习内驱力与学习](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%AD%A6%E4%B9%A0)
+  * [学习内驱力与学习](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E4%B8%8E%E5%AD%A6%E4%B9%A0)
   * [5.4Teacher problem](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
-  * [老师的困境](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E8%80%81%E5%B8%88%E7%9A%84%E5%9B%B0%E5%A2%83)
+  * [老师的困境](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E8%80%81%E5%B8%88%E7%9A%84%E5%9B%B0%E5%A2%83)
   * [5.5Learn drive distortions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
-  * [学习内驱力扭曲](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E6%89%AD%E6%9B%B2)
+  * [学习内驱力扭曲](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E6%89%AD%E6%9B%B2)
   * [5.6School enthusiasm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
-  * [上学热情](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E4%B8%8A%E5%AD%A6%E7%83%AD%E6%83%85)
+  * [上学热情](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E4%B8%8A%E5%AD%A6%E7%83%AD%E6%83%85)
   * [5.7Powering learn drive with SuperMemo](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Powering_learn_drive_with_SuperMemo)
-  * [用 SuperMemo 加强学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E7%94%A8-supermemo-%E5%8A%A0%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+  * [用 SuperMemo 加强学习内驱力](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E7%94%A8-supermemo-%E5%8A%A0%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
     * [5.7.1Enhancing the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Enhancing_the_learn_drive)
-    * [增强学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E5%A2%9E%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+    * [增强学习内驱力](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E5%A2%9E%E5%BC%BA%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
     * [5.7.2Stunting the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stunting_the_learn_drive)
-    * [阻碍学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E9%98%BB%E7%A2%8D%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+    * [阻碍学习内驱力](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E9%98%BB%E7%A2%8D%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
     * [5.7.3Learn drive at middle age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_at_middle_age)
-    * [中年时期的学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E4%B8%AD%E5%B9%B4%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+    * [中年时期的学习内驱力](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E4%B8%AD%E5%B9%B4%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
   * [5.8Perpetual learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perpetual_learn_drive)
-  * [永恒的学习内驱力](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E6%B0%B8%E6%81%92%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
+  * [永恒的学习内驱力](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E6%B0%B8%E6%81%92%E7%9A%84%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B)
   * [5.9Summary: Changes to the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
-  * [摘要：改变学习内驱力的因素](https://l-m-sherlock.github.io/supermemo.guru-cn/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/05.Effect%20of%20schooling%20on%20the%20learn%20drive%E5%AD%A6%E6%A0%A1%E6%95%99%E8%82%B2%E5%AF%B9%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%BD%B1%E5%93%8D.html#%E6%91%98%E8%A6%81%E6%94%B9%E5%8F%98%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%9B%A0%E7%B4%A0)
+  * [摘要：改变学习内驱力的因素](05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md#%E6%91%98%E8%A6%81%E6%94%B9%E5%8F%98%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B%E7%9A%84%E5%9B%A0%E7%B4%A0)
 * [6Learn drive and reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_reward)
-* 学习内驱力和奖励
+* [学习内驱力和奖励](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习内驱力和奖励)
   * [6.1The main problem in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_main_problem_in_education)
-  * 教育中的主要问题
+  * [教育中的主要问题](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#教育中的主要问题)
   * [6.2Learn drive and entropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_entropy)
-  * 学习内驱力和熵
+  * [学习内驱力和熵](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习内驱力和熵)
   * [6.3Prior knowledge in information seeking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)
-  * 信息搜寻中的预备知识
+  * [信息搜寻中的预备知识](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#信息搜寻中的预备知识)
   * [6.4Entropy detectors in the brain](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Entropy_detectors_in_the_brain)
-  * 大脑中的熵检测器
+  * [大脑中的熵检测器](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#大脑中的熵检测器)
   * [6.5Speed of information processing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Speed_of_information_processing)
-  * 信息处理速度
+  * [信息处理速度](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#信息处理速度)
   * [6.6Probability vs. knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Probability_vs._knowledge)
-  * 概率与知识
+  * [概率与知识](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#概率与知识)
   * [6.7Predictability and surprisal](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Predictability_and_surprisal)
-  * 可预见性和意外
+  * [可预见性和意外](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#可预见性和意外)
   * [6.8Detecting surprisal](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Detecting_surprisal)
-  * 检测意外
+  * [检测意外](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#检测意外)
   * [6.9The wow factor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_wow_factor)
-  * 「哇」因子
+  * [「哇」因子](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#「哇」因子)
   * [6.10Knowledge valuation network](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuation_network)
-  * 知识评估网络
+  * [知识评估网络](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#知识评估网络)
     * [6.10.1Knowledge valuations](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuations)
-    * 知识评估
+    * [知识评估](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#知识评估)
     * [6.10.2The emotional brain and the rational brain](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_emotional_brain_and_the_rational_brain)
-    * 感性脑和理性脑
+    * [感性脑和理性脑](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#感性脑和理性脑)
     * [6.10.3Decision tree in fast thinking](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Decision_tree_in_fast_thinking)
-    * 快速思考中的决策树
+    * [快速思考中的决策树](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#快速思考中的决策树)
     * [6.10.4Valuation network in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Valuation_network_in_education)
-    * 教育中的评估网络
+    * [教育中的评估网络](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#教育中的评估网络)
     * [6.10.5Knowledge valuation that affects the course of life](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Knowledge_valuation_that_affects_the_course_of_life)
-    * 影响生命过程的知识评估
+    * [影响生命过程的知识评估](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#影响生命过程的知识评估)
   * [6.11Learntropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)
-  * 学习熵
+  * [学习熵](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习熵)
   * [6.12Signal timing vs. learntropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Signal_timing_vs._learntropy)
-  * 信息时机与学习熵
+  * [信息时机与学习熵](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#信息时机与学习熵)
   * [6.13Learntropy and learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy_and_learn_drive)
-  * 学习熵和学习内驱力
+  * [学习熵和学习内驱力](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习熵和学习内驱力)
   * [6.14Optimum information delivery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_information_delivery)
-  * 最佳信息传授
+  * [最佳信息传授](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#最佳信息传授)
   * [6.15Gripping lectures](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Gripping_lectures)
-  * 令人全神贯注的讲课
+  * [令人全神贯注的讲课](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#令人全神贯注的讲课)
   * [6.16Learning rewards](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_rewards)
-  * 学习奖励
+  * [学习奖励](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习奖励)
     * [6.16.1Learn drive reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_reward)
-    * 学习内驱力奖励
+    * [学习内驱力奖励](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习内驱力奖励)
     * [6.16.2Evolution of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Evolution_of_the_learn_drive)
-    * 学习内驱力的进化
+    * [学习内驱力的进化](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习内驱力的进化)
     * [6.16.3Procedural learning reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Procedural_learning_reward)
-    * 程序性学习奖励
+    * [程序性学习奖励](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#程序性学习奖励)
     * [6.16.4Declarative learning reward](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Declarative_learning_reward)
-    * 陈述性学习奖励
+    * [陈述性学习奖励](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#陈述性学习奖励)
     * [6.16.5Reward centers in learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reward_centers_in_learning)
-    * 学习中的奖励中枢
+    * [学习中的奖励中枢](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习中的奖励中枢)
   * [6.17Biederman model](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Biederman_model)
-  * Biederman 模型
+  * [Biederman 模型](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#Biederman 模型)
     * [6.17.1Pleasure of reading about the pleasure of reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_reading_about_the_pleasure_of_reading)
-    * 阅读关于阅读快乐的快乐
+    * [阅读关于阅读快乐的快乐](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#阅读关于阅读快乐的快乐)
     * [6.17.2Opioid vs. dopamine pleasure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Opioid_vs._dopamine_pleasure)
-    * 阿片类药物与多巴胺的快乐
+    * [阿片类药物与多巴胺的快乐](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#阿片类药物与多巴胺的快乐)
     * [6.17.3Pleasure of association](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Pleasure_of_association)
-    * 联想的快乐
+    * [联想的快乐](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#联想的快乐)
     * [6.17.4Impact of memory on the pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Impact_of_memory_on_the_pleasure_of_learning)
-    * 记忆对学习快乐的影响
+    * [记忆对学习快乐的影响](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#记忆对学习快乐的影响)
     * [6.17.5Stages of learn drive evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stages_of_learn_drive_evolution)
-    * 学习内驱力进化的几个阶段
+    * [学习内驱力进化的几个阶段](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习内驱力进化的几个阶段)
   * [6.18Desirable difficulty](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Desirable_difficulty)
-  * 值得的困难
+  * [值得的困难](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#值得的困难)
   * [6.19Addiction to learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Addiction_to_learning)
-  * 学习成瘾
+  * [学习成瘾](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习成瘾)
     * [6.19.1Inborn addiction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Inborn_addiction)
-    * 天生成瘾
+    * [天生成瘾](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#天生成瘾)
     * [6.19.2Learning and gambling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_gambling)
-    * 学习和赌博
+    * [学习和赌博](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习和赌博)
     * [6.19.3Learning and sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_sleep)
-    * 学习和睡眠
+    * [学习和睡眠](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习和睡眠)
     * [6.19.4Learning and exercise](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_exercise)
-    * 学习和锻炼
+    * [学习和锻炼](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习和锻炼)
     * [6.19.5Learning restraint](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_restraint)
-    * 学习限制
+    * [学习限制](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习限制)
   * [6.20Displeasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Displeasure_of_learning)
-  * 学习的不快
+  * [学习的不快](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习的不快)
   * [6.21Learning and procrastination](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_procrastination)
-  * 学习和拖延
+  * [学习和拖延](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习和拖延)
   * [6.22Learning and depression](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_and_depression)
-  * 学习和抑郁
+  * [学习和抑郁](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习和抑郁)
     * [6.22.1Learning at school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_at_school)
-    * 在校学习
+    * [在校学习](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#在校学习)
     * [6.22.2Impact of memory on mood](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Impact_of_memory_on_mood)
-    * 记忆对情绪的影响
+    * [记忆对情绪的影响](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#记忆对情绪的影响)
     * [6.22.3Anti-depressants](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Anti-depressants)
-    * 抗抑郁药
+    * [抗抑郁药](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#抗抑郁药)
     * [6.22.4Learn drive and optimism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_optimism)
-    * 学习内驱力和乐观
+    * [学习内驱力和乐观](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习内驱力和乐观)
     * [6.22.5Can learning help you?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Can_learning_help_you.3F)
-    * 学习可以帮到你吗？
+    * [学习可以帮到你吗？](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习可以帮到你吗？)
   * [6.23Optimization of education: Global or Local?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimization_of_education:_Global_or_Local.3F)
-  * 教育的优化：全局还是局部？
+  * [教育的优化：全局还是局部？](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#教育的优化：全局还是局部？)
     * [6.23.1Perfect model of education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perfect_model_of_education)
-    * 完美的教育模型
+    * [完美的教育模型](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#完美的教育模型)
     * [6.23.2Optimization based on the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimization_based_on_the_learn_drive)
-    * 基于学习内驱力的优化
+    * [基于学习内驱力的优化](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#基于学习内驱力的优化)
     * [6.23.3Designing a child's mind](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Designing_a_child.27s_mind)
-    * 设计一个孩子的思想
+    * [设计一个孩子的思想](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#设计一个孩子的思想)
     * [6.23.4Reliance on emergence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Reliance_on_emergence)
-    * 依靠涌现
+    * [依靠涌现](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#依靠涌现)
     * [6.23.5The tree metaphor](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_tree_metaphor)
-    * 树类比
+    * [树类比](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#树类比)
     * [6.23.6Local optimization](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Local_optimization)
-    * 局部优化
+    * [局部优化](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#局部优化)
     * [6.23.7Is global optimization possible?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Is_global_optimization_possible.3F)
-    * 全局优化可能吗？
+    * [全局优化可能吗？](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#全局优化可能吗？)
   * [6.24Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning_2)
-  * 学习的基本规律
+  * [学习的基本规律](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#学习的基本规律)
   * [6.25Summary: Pleasure of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Pleasure_of_learning)
-  * 摘要：学习的快乐
+  * [摘要：学习的快乐](06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md#摘要：学习的快乐)
 * [7Learn drive vs. learned helplessness](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learned_helplessness)
 * 学习内驱力与习得性无助
   * [7.1Loss of learn drive with age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Loss_of_learn_drive_with_age)
