修正18章一些细节

--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/18.stress-resilience-ya-li-shi-ying-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/18.stress-resilience-ya-li-shi-ying-li.md
@@ -14,7 +14,7 @@ While scientists speak of the damaging effects of stress on the brain, the conce
 
 Kids who suffer from separation anxiety when dropped in daycare at the very young age provide an example of highly harmful stress. On the other hand, injuries suffered in the football field may be taken as a badge of honor, and an example of good stress that builds resilience. Bad stress will result in loss of brain cells, while good stress may, in theory, have the opposite effect.
 
-儿童若在很小的时候就被送到托儿所，将会使他们更加容易产生与父母分离的焦虑症状，这就是高度有害压力的一个例子。而另一方面，在足球场上受伤则更像是一种荣誉的象征，这是良好的压力提升压力适应力的一个例子。坏的压力会导致脑细胞的损失，而好的压力，在理论上，极可能有相反的效果。
+儿童若在很小的时候就被送到幼儿园，将会使他们更加容易产生与父母分离的焦虑症状，这就是高度有害压力的一个例子。而另一方面，在足球场上受伤则更像是一种荣誉的象征，这是良好的压力提升压力适应力的一个例子。坏的压力会导致脑细胞的损失，而好的压力，在理论上，极可能有相反的效果。
 
 [Attachment parenting](https://en.wikipedia.org/wiki/Attachment_parenting) is often derided as "stress-free upbringing", while it should rather be seen as a good parenting that indeed helps prevent stress wherever it is harmful for health or brain development.
 
@@ -90,7 +90,7 @@ We are all aware of those coping mechanisms. This is why many parents easily fal
 
 Many a parent may be tempted to emulate Williams or Polgar accomplishments in total oblivion of the primary rule: **kids should never be exposed to chronic stress**. Their brains are too young. Their minds are too immature. They cannot effectively employ knowledge-based or procedural adaptation to stress. Instead, they will adapt via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) and their brain growth will be stunted.
 
-许多父母可能会试图效仿Williams或Polgar的成就，却完全遗忘了一条基本准则：**孩子们永远不应该长期处于慢性压力下**。他们的大脑太年轻了。他们的思想太不成熟了。他们无法有效地利用基于知识或程序的压力来适应压力。相反，他们将通过[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)来适应，他们的大脑发育将受到阻碍。
+许多父母可能会试图效仿 Williams 或 Polgar 的成就，却完全遗忘了一条基本准则：**孩子们永远不应该长期处于慢性压力下**。他们的大脑太年轻了。他们的思想太不成熟了。他们无法有效地利用基于知识或程序的压力来适应压力。相反，他们将通过[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)来适应，他们的大脑发育将受到阻碍。
 
 There are benefits to eustress, and various forms of "stress" are part of a healthy training and development. However, there are no trainable defences against chronic stress, i.e. the one you get with perpetual sleep deprivation, bullying, maternal separation, child abuse, etc. Those are stresses that change the metabolism, and change the wiring of the brain. They correlate well with an increase in mental disease, behavioral disorders, addictions, etc. Chronic stress is the type of stress you go to sleep with. Characterically, this is the stress that does not go away on waking. Its chronic nature is best expressed by the fact that there is no "*rise and shine*". Chronically stressed kid wakes up with a worry. Chronic stress can persist and gnaw at you for days or weeks. Attenuation can be used to reduce the impact of inevitable stress. Professional training helps stress management in stressful jobs. However, the purpose of those is the prevention of chronic stress, procedural adaptation, or knowledge-based adaptation. Professional training does not provide biological resistance to the effects of chronic stress.
 
@@ -110,7 +110,7 @@ Older psychologists and educators have often been biased by years of analysis of
 
 The opposite is true. Freedom is a better way to shape a better future character. We teach kids to tolerate the reality, while they should rather let their reason figure out what is tolerable and what is welcome in proportion to brain development. Why tolerate toilet, sleep, meal, or sport timing restrictions in violation of the [circadian cycle](https://supermemo.guru/wiki/Good_sleep)? Why tolerate departures from the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle)? It is smarter to be intolerant and learn to adapt in proportion to brain power and one's own intolerance! Let's adapt the world to humans, not the other way around. Children can be a great factor of change in that respect.
 
-而事实正好相反。自由是塑造更美好未来品格的更好方式。我们教孩子们容忍现实，而他们更应该让他们的理性来决定什么是可以容忍的，什么是受欢迎的，与大脑发育成正比。为什么要忍受解手、睡眠、吃饭或运动的时间限制而违背[生理周期](https://supermemo.guru/wiki/Good_sleep)呢?为什么要容忍与[自然创造周期](https://supermemo.guru/wiki/Natural_creativity_cycle)的背离?更聪明的做法是不容忍，并学会适应大脑的能力和自己的不容忍!让世界适应人类，而不是反过来。在这方面，儿童可以成为改变的重要因素。
+而事实正好相反。自由是塑造更美好未来品格的更好方式。我们教孩子们容忍现实，而他们更应该让他们的理性来决定什么是可以容忍的，什么是受欢迎的，与大脑发育成正比。为什么要忍受解手、睡眠、吃饭或运动的时间限制而违背[生理周期](https://supermemo.guru/wiki/Good_sleep)呢？为什么要容忍与[自然创造周期](https://supermemo.guru/wiki/Natural_creativity_cycle)的背离？更聪明的做法是不容忍，并学会适应大脑的能力和自己的不容忍!让世界适应人类，而不是反过来。在这方面，儿童可以成为改变的重要因素。
 
 **Youth should be devoted to brain development**. There is no stronger weapon than a well-developed brain. Learning and "preparation" come easy to a brisk brain. They can proceed in proportion to maturity. They can capitalize on the [learn drive](https://supermemo.guru/wiki/Learn_drive) with minimal assistance from [optimum push](https://supermemo.guru/wiki/Push_zone).
 
@@ -130,7 +130,7 @@ Preparation for adulthood is not only about stress resilience. Many educators cl
 
 Homeschoolers often boast that what they like most about learning at home is that they can get good sleep. **The right to get good sleep should be a basic human right for children**. Some professions involve inevitable sleep deprivation or interference with chronobiology. However, adaptations to "messy sleep" lifestyle are predominantly procedural, not biological. Going to sleep early, and sticking to regular sleep hours are both procedural adaptations. The only significant biological adaptation is the possibility of determining the sleep phase via [chronotherapy](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). In the course of 2-3 weeks, an owl can be made into an early bird with the tools of chronobiology. This is again procedural adaptation that capitalizes on a single property of the sleep control system: [sleep phase](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). This is not a biological adaptation that helps reduce the effects of sleep deprivation once it occurs.
 
-在家上学的孩子经常自豪说，他们最喜欢在家学习的原因是他们可以睡个好觉。**获得良好睡眠的权利应该是儿童的一项基本人权**。有些职业不可避免地会导致睡眠不足或生物钟紊乱。然而，适应「凌乱的睡眠」生活方式主要是程序性的，而不是天生的。早睡和坚持规律的睡眠时间都是后天规范的适应。唯一重要的生物适应是通过[时间调整](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)决定可能的睡眠阶段。在2-3周的过程中，夜猫子可以用[时间生物学](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)的方式变成一只早起的鸟。这又是一种程序化的适应，利用了睡眠控制系统的一个单一属性: [睡眠阶段](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)。但是当睡眠剥夺一旦发生，这并不是一种有助于减少压力影响的生物适应。
+在家上学的孩子经常自豪说，他们最喜欢在家学习的原因是他们可以睡个好觉。**获得良好睡眠的权利应该是儿童的一项基本人权**。有些职业不可避免地会导致睡眠不足或生物钟紊乱。然而，适应「凌乱的睡眠」生活方式主要是程序性的，而不是天生的。早睡和坚持规律的睡眠时间都是后天规范的适应。唯一重要的生物适应是通过[时间调整](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)决定可能的睡眠阶段。在2-3周的过程中，夜猫子可以用[时间生物学](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)的方式变成一只早起的鸟。这又是一种程序化的适应，利用了睡眠控制系统的一个单一属性：[睡眠阶段](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)。但是当睡眠剥夺一旦发生，这并不是一种有助于减少压力影响的生物适应。
 
 Torturing kids with an alarm clock to train school discipline is as bad as feeding them with alcohol. Both affect brain structures and permanently change lives. The only difference is that alarm clocks are still socially acceptable.
 
